k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motto-d
  labels:
    app: motto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: motto
  template:
    metadata:
      labels:
        app: motto
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: motto
        image: nheek/motto:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "30Mi"
          limits:
            memory: "70Mi"
