k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: motto-service
  labels:
    app: motto
spec:
  type: LoadBalancer
  ports:
    - port: 30089
      targetPort: 3000
  selector:
    app: motto
